--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Glam book</title>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <!-- <link rel="preload" crossorigin href="/fonts/monof55.ttf" as="font" /> -->
+    <script src="https://telegram.org/js/telegram-web-app.js?59"></script>
   </head>
   <body>
     <div id="root"></div>
