try html meta tag for system text color

--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
+    <meta name="theme-color" content="oklch(0.93 0 0)" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
     <title>Glam book</title>
     <!-- <link rel="preload" crossorigin href="/fonts/monof55.ttf" as="font" /> -->
   </head>
